<resources>
    <string name="appName">Lista Profili</string>
    <string name="addProfile">Aggiungi profilo</string>
    <string name="profiloEdit">Inserisci nome profilo</string>
    <string name="cancelButton">Annulla</string>
    <string name="deleteProfile">Elimina</string>
    <string name="confirm">Conferma</string>
    <string name="titleActivityMaps">Mappa</string>
    <string name="metodoRilevamento">Metodo di rilevamento</string>
    <string name="gps">GPS</string>
    <string name="wifi">WI-FI</string>
    <string name="nfc">NFC</string>
    <string name="beacon">Beacon</string>
    <string name="name">Nome</string>
    <string name="brightness">Luminosità</string>
    <string name="volume">Volumi</string>
    <string name="volumeRing">Suoneria</string>
    <string name="volumeMusic">Musica</string>
    <string name="volumeNotification">Notifiche</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="apps">AppList</string>
    <string name="auto">Auto</string>
    <string name="add">CREA</string>
    <string name="set">Imposta</string>
    <string name="other">Altro</string>
    <string name="id">Tag ID</string>
    <string name="techSupported">Tecnologie Supportate</string>
    <string name="address">Indirizzo</string>
    <string name="distance">Distanza</string>
    <string name="password">Password</string>
    <string name="newPassword">Inserisci Password</string>
    <string name="retypePassword">Ripeti Password</string>
    <string name="otpPassword">One Time Password</string>
    <string name="positionOTP">Inserisci password per la posizione:</string>
    <string name="challenge">Sfida:</string>
    <string name="challengeSimmetric">Sfida Simmetrica</string>
    <string name="challengeSolution">Soluzione</string>
</resources>
