<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    >
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <EditText
        android:id="@+id/nomeProfilo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        />
    <TextView
        android:layout_marginTop="@dimen/marginTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metodo_rilevamento"
        android:textColor="@color/textColor"
        />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        >
        <RadioButton
            android:layout_marginTop="@dimen/marginTopButtons"
            android:id="@+id/gpsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gps"/>

        <RadioButton
            android:id="@+id/wifiButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi"/>
        <RadioButton
            android:id="@+id/nfcButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nfc"/>
        <RadioButton
            android:id="@+id/beaconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beacon"/>
    </RadioGroup>

    <LinearLayout
        android:layout_marginTop="@dimen/marginTop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lume"
            android:layout_width="@dimen/widthLayout"
            android:layout_height="wrap_content"
            android:text="@string/brightness"
            android:textColor="@color/textColor"

            />
        <SeekBar

            android:id="@+id/brightnessBar"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/lume"
            android:layout_gravity="center_vertical" />
        <CheckBox
            android:id="@+id/brightnessCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto"
            android:layout_alignParentRight="true"
            android:textColor="@color/textColor"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/marginTop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volume"
            android:textColor="#000"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginTopButtons"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/marginTop"
                >
            <TextView
                android:id="@+id/volumeRing"
                android:layout_width="@dimen/widthLayout"
                android:layout_height="wrap_content"
                android:text="@string/volumeRing"
                android:textColor="@color/textColor"/>
            <SeekBar
                android:id="@+id/volumeBarRing"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/volumeRing" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/marginTop"
                >
            <TextView
                android:id="@+id/volumeMusic"
                android:layout_width="@dimen/widthLayout"
                android:layout_height="wrap_content"
                android:text="@string/volumeMusic"
                android:textColor="@color/textColor"/>
            <SeekBar
                android:id="@+id/volumeBarMusic"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/volumeMusic" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/marginTop"
                >
            <TextView
                android:id="@+id/volumeNotification"
                android:layout_width="@dimen/widthLayout"
                android:layout_height="wrap_content"
                android:text="@string/volumeNotification"
                android:textColor="@color/textColor"/>
            <SeekBar
                android:id="@+id/volumeBarNotification"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/volumeNotification" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="@dimen/marginTop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/bluetooth"
            android:layout_width="@dimen/widthLayout"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth"
            android:textColor="@color/textColor"/>
        <Switch
            android:id="@+id/switchBluetooth"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/bluetooth" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="@dimen/marginTop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/wifi"
            android:layout_width="@dimen/widthLayout"
            android:layout_height="wrap_content"
            android:text="@string/wifi"
            android:textColor="@color/textColor"/>
        <Switch
            android:id="@+id/switchWifi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/wifi" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/apps"
            android:textColor="@color/textColor"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/appList"
            android:layout_weight="0.5"
            android:text="-"
            android:textColor="@color/textColor"/>
    </LinearLayout>
    </LinearLayout>
</ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
        android:id="@+id/modifyButton"
        android:text="@string/confirm"
        android:background="@color/buttonColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:layout_marginTop="30px"
        android:layout_marginBottom="0px"
        android:layout_weight="0.5"
        />

        <Button
            android:id="@+id/deleteProfile"
            android:text="@string/deleteProfile"
            android:background="@color/buttonColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:layout_marginTop="30px"
            android:layout_marginBottom="0px"
            android:layout_toRightOf="@+id/modifyButton"
            android:layout_marginLeft="80px"
            android:layout_weight="0.5"
            />
    </LinearLayout>

</LinearLayout>
